# bas_license

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt
.github/: release-drafter.yml
.github/workflows/: build.yml  ci.yml  deploy.yml  release-ci.yml  release-no-ci.yml  release.yml
alembic/: env.py
alembic/versions/: 1bfd03c62665_create_sessions_table.py  544304a731bf_init.py
examples/: getBASUserEmail.js  verifySignature.js
examples/getBASUserEmail/: README.md  getBASUserEmail.js
examples/validateBody/: README.md  validateBody.js
examples/verifySignature/: 1-beginVerifySignatureExecuteCode.js  2-verifySignatureNode.js  3-finalVerifySignatureExecuteCode.js  README.md
monitoring/grafana/: dashboard.json
monitoring/loki/: config.yml
monitoring/prometheus/: dev-prometheus.yml  prometheus.yml
monitoring/promtail/: config.yml
scripts/: entrypoint.sh  generate_keys.py  generate_keys.sh
src/: main.py
src/core/: _types.py  config.py  constants.py  enums.py  use_cases.py
src/core/models/: __init__.py  _types.py  database.py  license_tasks.py  license_tasks_data.py  scripts.py  sessions.py  users.py  users_scripts.py
src/core/repositories/: __init__.py  base.py  exceptions.py  license_tasks.py  license_tasks_data.py  scripts.py  sessions.py  users.py  users_scripts.py
src/core/schemas/: __init__.py  base.py  errors.py  (+2 more)
src/v1/: dependencies.py  exceptions.py  handlers.py  middlewares.py  responses.py
tests/: conftest.py  test_bas_auth.py  test_bas_worker.py  test_license_api.py  test_license_api_pending.py  test_license_api_status_creds_not_found.py  test_recaptcha.py
tests/helpers/: __init__.py  api.py  database.py  routers.py
(+40 files in other folders)
